testsuite/tests/dependent/should_fail/T15343.stderr

T15343.hs:15:18: error:
    • Expecting one more argument to ‘WhySym’
      Expected kind ‘forall z. z’, but ‘WhySym’ has kind ‘* -> *’
    • In the type ‘WhySym’
      In the expression: elimSing @WhySym
      In an equation for ‘hsym’: hsym = elimSing @WhySym
